# user-management

./: CHANGELOG.md  Dockerfile  README.md  cypress.config.js  pyproject.toml  requirements-tests.txt  requirements.txt  setup.cfg  setup.py  setupenv.sh
.github/workflows/: docker.yaml  docs.yml  wipac_cicd.yaml
cypress/integration/: groups.spec.js  home.spec.js  insts.spec.js  register.spec.js
cypress/support/: index.js  keycloak.js  reg_token.js
docs/: admin_insts.md  new_user.md  pwd_reset.md  user_login.md  user_profile.md
tests/: krs_util.py  test_api_groups.py  test_api_insts.py  test_api_registration.py  test_api_users.py  test_cache.py  test_insts.py  util.py
user_mgmt/: __init__.py  __main__.py  cache.py  groups.py  handler.py  insts.py  registration.py  server.py  test_server.py  users.py
user_mgmt/static/: helpers.js  index.html  keycloak.js  main.css  main.js
user_mgmt/static/routes/: error404.js  groups.js  home.js  insts.js  register.js  userinfo.js  userprofile.js
